--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cloudinary": "^1.13.2",
     "connect-mongo": "^2.0.3",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
