--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mongo": "^0.1.0",
     "mongodb": "^3.1.12",
     "mongoose": "^5.4.5",
+    "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "path": "^0.12.7"
   },
